2020-11-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/fits.c (ReadFITSImage): Use resource-limited memory
	allocator.
	(WriteFITSImage): Use resource-limited memory

	* coders/dib.c (ReadDIBImage): Use resource-limited memory
	allocator.
	(WriteDIBImage): Use resource-limited memory allocator.

	* coders/bmp.c (ReadBMPImage): Use resource-limited memory
	allocator.
	(WriteBMPImage): Use resource-limited memory allocator.

2020-11-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Improve RGBATiledMethod progress
	monitor so it reports more steps.
	(ReadTIFFImage): Improve TiledMethod progress monitor so it
	reports more steps.

	* fuzzing/utils.cc (class MagickState): Enable tracing of
	exception events in order to help discover the origin of errors.
	If too much output comes out, then this will be removed.

	* magick/render.c (ConvertPathToPolygon): Attempt to fix leak of
	'points' on memory allocation failure.

2020-11-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (ConvertPathToPolygon): Make sure not to leak
	points from added Edge.  Fixes oss-fuzz 27608 "Direct-leak in
	_MagickReallocateResourceLimitedMemory".
	(DrawDashPolygon): Place an aribrary limit on stroke dash polygon
	unit maximum length in order to avoid possibly rendering
	"forever".  Addresses oss-fuzz 24236 "Timeout in
	coder_MVG_fuzzer".

2020-11-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPolygonPrimitive): Try to minimize the
	impact of too many threads due to replicated data until such time
	as the data structures can be re-designed to directly support
	threading.

2020-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Hg.rst: Describe how to clone the repository from
	SourceForge using the ssh protocol rather than https.

	* coders/ps.c (WritePSImage): Fix problem when writing PseudoClass
	image with a colormap larger than two entries as bilevel.