@@ -38,9 +38,11 @@
 <p>2020-11-27  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/jbig.c (WriteJBIGImage): Use resource-limited memory
+allocator.</li>
 <li>coders/fits.c (ReadFITSImage): Use resource-limited memory
 allocator.
-(WriteFITSImage): Use resource-limited memory</li>
+(WriteFITSImage): Use resource-limited memory allocator.</li>
 <li>coders/dib.c (ReadDIBImage): Use resource-limited memory
 allocator.
 (WriteDIBImage): Use resource-limited memory allocator.</li>
